# OpenAusweis

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  release-plan.yml
apps/ausweisapp2-bridge/: Cargo.toml
apps/ausweisapp2-bridge/src/: main.rs
apps/browser-extension/: manifest.json  manifest.v2.json  manifest.v3.json  package.json  tsconfig.json
apps/browser-extension/demo/: index.html
apps/browser-extension/src/: background.js  background.test.js  background.v2-loader.js  content.js  native-messaging-host.firefox.json  native-messaging-host.json  popup.html  popup.js
apps/daemon/: Cargo.toml
apps/daemon/src/: auth_executor.rs  main.rs  session.rs
apps/desktop/: index.html  package.json
apps/desktop/src/: App.js  App.tsx  main.js  main.tsx  styles.css  uxState.test.ts  uxState.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/native-host/: Cargo.toml  org.openausweis.native.firefox.json.template  org.openausweis.native.json.template
apps/native-host/src/: main.rs
crates/openausweis-core/: Cargo.toml
crates/openausweis-core/src/: lib.rs
crates/openausweis-ipc/: Cargo.toml
crates/openausweis-ipc/src/: lib.rs
crates/openausweis-pcsc/: Cargo.toml
crates/openausweis-pcsc/src/: lib.rs
docs/: AGENT_RULES.md  ARCHITECTURE.md  COPILOT_MASTER_PROMPT.md  DEVELOPMENT_WORKFLOW.md  PHASE_1_PLAN.md  PHASE_2B_FIREFOX_CHROMIUM_COMPATIBILITY.md  PHASE_2B_IMPLEMENTATION_PLAN.md  PHASE_2B_LINUX_SANDBOXING.md  PHASE_2B_PLANNING_COMPLETE.md  PHASE_2B_SECURITY_ANALYSIS.md  PHASE_2B_SESSION_STATE_MACHINE.md  PHASE_2B_TESTING_STRATEGY.md  PHASE_2B_UX_ROLLBACK.md  PROJECT_VISION.md  PR_REVIEW_CHECKLIST.md  ROADMAP.md  SECURITY_MODEL.md  TECH_STACK.md  UBUNTU_24_DESKTOP_MIGRATION.md  UX_GOALS.md
docs/architecture/: ARCHITECTURE_DECISIONS.md
docs/testing/: DESKTOP_COMPATIBILITY_MATRIX.md
docs/ux/: UX_PRINCIPLES.md
scripts/: check-rust.sh  dev-up.sh  install-native-host-firefox.sh  install-native-host.sh  run-daemon.sh  run-desktop-ausweisapp2.sh  run-native-host.sh  setup-native-host.sh  validate-browser-manifests.sh  validate-desktop-polish.sh  validate-linux-packaging.sh
scripts/snap/: openausweis-desktop-launch
snap/: snapcraft.yaml
