[package]
name = "openausweis-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
openausweis-ipc = { path = "../../crates/openausweis-ipc" }
openausweis-pcsc = { path = "../../crates/openausweis-pcsc" }
openausweis-core = { path = "../../crates/openausweis-core" }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
